--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "REST API for Cafeco",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Leaf",
   "license": "ISC",
