--- a/client-user/package.json
+++ b/client-user/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "nuka-carousel": "^4.5.4",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-responsive-carousel": "^3.1.47",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-slick": "^0.23.2",
+    "serve": "^11.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
